<resources>
    <string name="app_name">IyuMusic</string>
    <string name="app_corp">Iyuba</string>
    <string name="app_intro">The most popular APP of English learning</string>
    <string name="hello_world">IyuMusic</string>
    <string name="app_know">Known</string>
    <string name="app_qun">Qun</string>
    <string name="app_more">More</string>
    <string name="app_reload">Reload</string>
    <string name="app_accept">OK</string>
    <string name="app_sure">Sure</string>
    <string name="app_del">Del</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_submit">Submit</string>
    <string name="app_no_change">Your set have not been changed yet.</string>
    <string name="select_all">Select all</string>
    <string name="app_buy">Buy</string>
    <string name="generic_server_down">Connection timed out</string>
    <string name="no_internet">No network connection</string>
    <string name="generic_error">Service exception</string>
    <string name="data_error">Data parse exception</string>
    <string name="net_speed_slow">Change to better network for this function</string>
    <string name="bug_exit">Sorry, unhandled APP exit occurred</string>
    <string name="alert_home">Press again to return the home screen</string>
    <string name="alert_exit">Press again to exit app</string>
    <string name="list_double">Double click to return list top</string>
    <string name="swipe_hint">Swipe more harder</string>
    <string name="no_net_to_local">No net, would you please enjoy downloaded music?</string>
    <string name="to_local_go">Sure</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="storage_permission">Permission</string>
    <string name="storage_permission_cancel">Permission denied，can no use this function.</string>
    <string name="file_title">File manager</string>
    <string name="file_pos_title">Select music folder</string>
    <string name="file_paste_title">Paste to</string>
    <string name="file_move_title">Move</string>
    <string name="file_cannotopen">Can not open: %1$s</string>
    <string name="file_rename">Rename</string>
    <string name="file_delete">Delete</string>
    <string name="file_info">Detail</string>
    <string name="file_paste">Paste</string>
    <string name="file_copy">Copy</string>
    <string name="file_move">Move</string>
    <string name="file_create">Create</string>
    <string name="file_create_dialogtitle">Create folder</string>
    <string name="file_rename_dialogtitle">Rename folder</string>
    <string name="file_name_empty">Filename can not be empty</string>
    <string name="file_name_same">Same filename</string>
    <string name="file_exists">File exists!</string>
    <string name="file_noexists">No file exist</string>
    <string name="file_create_fail">Failed to create file</string>
    <string name="file_rename_fail">Failed to rename file</string>
    <string name="file_name">Filename</string>
    <string name="file_size">Size</string>
    <string name="file_contents">Contents</string>
    <string name="file_lastmodified">Last modified time</string>
    <string name="file_remove">File remove</string>
    <string name="file_remove_info">Please wait while the file is moving</string>
    <string name="file_path_move_success">Move file success</string>
    <string name="file_path_move_exception">If failed to move file, please reselect the folder or move with your hand</string>
    <string name="oper_sign_in">Sign in</string>
    <string name="oper_personal_state">State</string>
    <string name="oper_visitor">Temporary Account</string>
    <string name="oper_sign_in_handle">Go</string>
    <string name="oper_visitor_handle">Login</string>
    <string name="oper_vip">VIP center</string>
    <string name="oper_ground">Iyuba</string>
    <string name="oper_discover">Discover</string>
    <string name="oper_me">Me</string>
    <string name="oper_night">Night</string>
    <string name="oper_night_on">On</string>
    <string name="oper_night_off">Off</string>
    <string name="oper_sleep">Sleep</string>
    <string name="oper_skin">Skin</string>
    <string name="oper_setting">Settings</string>
    <string name="oper_about">About</string>
    <string name="oper_exit">Exit</string>
    <string name="oper_search">Search</string>
    <string name="oper_qrcode">Scan</string>
    <string name="oper_follow">Follow</string>
    <string name="oper_fan">Fan</string>
    <string name="oper_recommend">Recommend Friends</string>
    <string name="oper_download">My Download</string>
    <string name="oper_favor">My Favor</string>
    <string name="oper_listen">My Listen</string>
    <string name="oper_credits">Credits</string>
    <string name="oper_rank">Ranking</string>
    <string name="oper_bigdata">iStudy</string>
    <string name="oper_activity">Campaign</string>
    <string name="oper_circle">Moments</string>
    <string name="oper_message">Message</string>
    <string name="oper_friends">Search Friends</string>
    <string name="oper_wx">Official Accounts</string>
    <string name="oper_local_music">Local Music</string>
    <string name="oper_file">File Manager</string>
    <string name="oper_eggshell">Eggshell</string>
    <string name="login_title">Sign in</string>
    <string name="login_login">Sign in</string>
    <string name="login_oper">Sign up</string>
    <string name="login_on_way">Logging in,please wait</string>
    <string name="username_hint">Phone number/Email/User name</string>
    <string name="userpwd_hint">6~16 bits password</string>
    <string name="please_login">Please Sign in</string>
    <string name="auto_login">Auto Sign in</string>
    <string name="forget_pwd">Forget password</string>
    <string name="login_success">You have successfully logged in and welcome back %1$s</string>
    <string name="login_fail">Sign in failed, check username and password</string>
    <string name="login_error">Account message got failed, please sign in again.</string>
    <string name="personal_logout">Sign out</string>
    <string name="personal_logout_textmore">Sign Out Account</string>
    <string name="personal_logout_exit">Sign Out</string>
    <string name="personal_no_login">You have not sign in to Iyuba account</string>
    <string name="personal_daily_login">Daily sign in, credits added 5 percents.</string>
    <string name="personal_change_photo">You have signed up successfully, please select your portrait</string>
    <string name="personal_grade">等级: %1$s</string>
    <string name="personal_credits">Credits: %1$s</string>
    <string name="personal_follow">Follow: %1$s</string>
    <string name="personal_fan">Fan: %1$s</string>
    <string name="personal_message">Message: %1$s</string>
    <string name="personal_nosign">This person is too lazy to leave anything</string>
    <string name="regist_title">Sign up</string>
    <string name="regist_phone_part_two">Sign up is finished</string>
    <string name="regist_oper">Sign up</string>
    <string name="regist_oper_sub">Web</string>
    <string name="regist_phone_hint">Enter phone number</string>
    <string name="regist_phone_registed">%1$s has been signed up</string>
    <string name="regist_code_hint">Enter verification code</string>
    <string name="regist_email_hint">Enter sign up email</string>
    <string name="regist_pwd_hint">Enter password</string>
    <string name="regist_repwd_hint">Enter password again</string>
    <string name="regist_username_hint">Enter your user name</string>
    <string name="regist_username_error1">Can not use email</string>
    <string name="regist_username_error2">No "@" character</string>
    <string name="regist_by_phone">Phone</string>
    <string name="regist_by_email">Mail</string>
    <string name="regist_get_code">Verification code</string>
    <string name="regist_refresh_code">Get verification code again%1$ds</string>
    <string name="regist_protocol_checkbox">Agree</string>
    <string name="regist_protocol"><u>User rules and private policies</u></string>
    <string name="regist_on_way">Sign up is underway,please wait</string>
    <string name="regist_userid_same">That user name already exists. Please enter a different one</string>
    <string name="regist_email_same">That email account already exists. Please enter a different one</string>
    <string name="regist_code_on_way">Verification code has been sent, please wait</string>
    <string name="regist_success">Sign up success!</string>
    <string name="regist_fail">Sign up failed! Please try again</string>
    <string name="about_title">About</string>
    <string name="about_praise">Give me a praise</string>
    <string name="about_developer">Developer</string>
    <string name="about_website">Iyuba Website</string>
    <string name="about_update">Version update</string>
    <string name="about_update_message">There is a new version %1$s, would you like to update it?</string>
    <string name="about_update_accept">Update</string>
    <string name="about_update_deny">Ignore</string>
    <string name="about_update_fail">Failed to find new version</string>
    <string name="about_update_noneed">Current version is the last version</string>
    <string name="about_version">Version Code:%1$s</string>
    <string name="about_communicate">WeChat public account:iyubasong   QQ group:139337655。If you have any question, feel free to contact through hotline 4008881905 or admin@iyuba.cn</string>
    <string name="about_company">北京爱语吧科技有限公司版权所有\nCopyright ©2012-%1$d IYUBA Corp.\nAll Rights Reserved.</string>
    <string name="about_market_error">App store is not installed, so this function is not available.</string>
    <string name="about_developer_birth">Developed in:Software Academy of BUAA</string>
    <string name="about_developer_author">author:Chentong, BUAA</string>
    <string name="about_developer_contact">Contact:745634460@qq.com</string>
    <string name="about_developer_thanks">Thanks to open source communities: volley,emojicon,aigestudio Downloader,rengwuxian materialedittext,Code family,androidanimations,balysv materialmenu,drakeet materialdialog, traexrippleeffect,universalimageloader,FlycoRoundView_Lib，our product become more excellent because of you.</string>
    <string name="about_developer_blog">csdn home page: http://my.csdn.net/chentong2419</string>
    <string name="about_eggshell_open">Eggshell mode has opened</string>
    <string name="about_go_eggshell">Open eggshell</string>
    <string name="about_eggshell_opening">%1$s clicks is needed to open Eggshell mode</string>
    <string name="new_version_features">New version features</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_content_hint">Your comments and feedback are welcomed and appreciated</string>
    <string name="feedback_contact_hint">Contact（QQ/email）</string>
    <string name="feedback_on_way">Feedback in process,please wait</string>
    <string name="feedback_success">Feedback is submitted successfully, thanks for your support</string>
    <string name="feedback_fail">Feedback submission failed, try again</string>
    <string name="feedback_contact_empty">Contact can\'t be empty</string>
    <string name="matches_qq">Please enter correct QQ number</string>
    <string name="matches_email">Email format is incorrect</string>
    <string name="matches_pwd">The password do not match!</string>
    <string name="matches_phone">Phone number format is incorrect</string>
    <string name="matches_msg_code_empty">Verification code can\'t be empty</string>
    <string name="matches_msg_code">Verification code is incorrect</string>
    <string name="setting_title">Setting</string>
    <string name="share_to_circle">分享至朋友圈点击关注</string>
    <string name="share_to_friend">分享给好友点击关注</string>
    <string name="share_content">关注听歌微信公众号，获取更多主播时事动态，随时随地与小编交流。\n\n方法1：点击直接跳转微信客户端并自动复制公众号iyubasong，在微信搜索栏中黏贴并搜索，进入公众号点击关注。\n方法2：点击分享至好友或朋友圈，打开链接关注公众号。</string>
</resources>