<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.iyuba.music.widget.textview.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/share_content"
        android:textColor="@color/text_color"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/big_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin_large"
        android:orientation="vertical">

        <com.flyco.roundview.RoundTextView
            android:id="@+id/share_to_friend"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/row_space_big"
            android:text="@string/share_to_friend"
            android:textColor="#ededed"
            android:textSize="@dimen/large_text"
            app:rv_backgroundColor="@color/skin_app_color"
            app:rv_cornerRadius="@dimen/corner_radius_big" />

        <com.flyco.roundview.RoundTextView
            android:id="@+id/share_to_circle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin_big"
            android:gravity="center"
            android:padding="@dimen/row_space_big"
            android:text="@string/share_to_circle"
            android:textColor="#ededed"
            android:textSize="@dimen/large_text"
            app:rv_backgroundColor="@color/skin_app_color"
            app:rv_cornerRadius="@dimen/corner_radius_big" />
    </LinearLayout>
</RelativeLayout>